--- a/templates/500.html
+++ b/templates/500.html
@@ -1,5 +1,12 @@
-<br>
-<center>
-    <h1>505 INTERNAL ERROR</h1>
-    <p>TRY AGAIN</p>
-</center>
+
+{% extends 'base.html' %}
+
+{% block content %}
+
+    <br>
+    <center>
+        <h1>505 INTERNAL ERROR</h1>
+        <p>TRY AGAIN</p>
+    </center>
+
+{% endblock %}
