--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,9 +9,11 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{{url_for('user',name='renan')}}">User Profile</a>
           </li>
+
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link active" aria-current="page" href="{{url_for('name')}}">Name</a>
           </li>
+
           
           
         </ul>
