--- a/templates/name.html
+++ b/templates/name.html
@@ -3,6 +3,14 @@
 
 {% block content %}
 
+{% for message in get_flashed_messages() %}
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        <strong>Hello {{ name  }}{{ message }}</strong> 
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    
+{% endfor %}
+
 {% if name %}
     <h1>Hello {{ name }} !! </h1>
 {% else %}
