--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,6 +14,11 @@
             <a class="nav-link active" aria-current="page" href="{{url_for('name')}}">Name</a>
           </li>
 
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{{url_for('add_user')}}">Add User</a>
+          </li>
+
+
           
           
         </ul>
