--- a/templates/update.html
+++ b/templates/update.html
@@ -11,43 +11,36 @@
 {% endfor %}
 
 {% if name %}
-    <h1>Hello {{ name }} !! </h1>
+    <h1>Update User</h1>
     <br/><br/><br/>
 
     <table class="table table-sm">
         <tr>
             <td>{% for our_user in our_users %}
-                {{ our_user.id }} - <a href="{{ url_for('update',id=our_user.id) }}">{{ our_user.name }} </a> - {{ our_user.email }} - {{ our_user.favorite_color }}<br/>
+                {{ our_user.id }} - {{ our_user.name }} - {{ our_user.email }} - {{ our_user.favorite_color }} <br/>
             {% endfor %}</td> 
         </tr>
     </table>
 
 
 {% else %}
-    <h1>User List: </h1>
+    <h1>Update User</h1>
     <br/>
     <div class="shadow p-3 mb-5 bg-body-tertiary rounded">
-        <form method='POST'>
+        <form action="/update/{{ name_to_update.id }}" method='POST'>
             {{ form.hidden_tag() }}
             {{ form.name.label(class="form-label") }}
-            {{ form.name(class="form-control") }}
+            {{ form.name(class="form-control", value=name_to_update.name) }}
             {{ form.email.label(class="form-label") }}
-            {{ form.email(class="form-control") }}
+            {{ form.email(class="form-control",value=name_to_update.email) }}
             {{ form.favorite_color.label(class="form-label") }}
-            {{ form.favorite_color(class="form-control") }}
+            {{ form.favorite_color(class="form-control", value=name_to_update.favorite_color) }}
             <br/>
             {{ form.submit(class="btn btn-warning") }}
         </form>
     </div>
 <br/><br/><br/>
 
-<table class="table table-sm">
-    <tr>
-        <td>{% for our_user in our_users %} 
-            {{ our_user.id }} - <a href="{{ url_for('update',id=our_user.id) }}">{{ our_user.name }} </a> - {{ our_user.email }} - {{ our_user.favorite_color }} <br/>
-        {% endfor %}</td>
-    </tr>
-</table>
 
         {% endif %}     
         {% endblock %} </td>
