Added delete module

--- a/templates/update.html
+++ b/templates/update.html
@@ -33,10 +33,14 @@
             {{ form.name(class="form-control", value=name_to_update.name) }}
             {{ form.email.label(class="form-label") }}
             {{ form.email(class="form-control",value=name_to_update.email) }}
+            <br/>
             {{ form.favorite_color.label(class="form-label") }}
             {{ form.favorite_color(class="form-control", value=name_to_update.favorite_color) }}
             <br/>
             {{ form.submit(class="btn btn-warning") }}
+
+            <a href="{{ url_for('delete',id=id) }}" class="btn btn-danger">Delete</a>
+
         </form>
     </div>
 <br/><br/><br/>
