--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -17,9 +17,15 @@
     <table class="table table-sm">
         <tr>
             <td>{% for our_user in our_users %}
-                {{ our_user.id }} - <a href="{{ url_for('update',id=our_user.id) }}">{{ our_user.name }} </a> - {{ our_user.email }} - {{ our_user.favorite_color }}<br/>
-            {% endfor %}</td> 
+                {{ our_user.id }} - <a href="{{ url_for('update',id=our_user.id) }}">
+                    {{ our_user.name }} </a> - 
+                    {{ our_user.email }} - 
+                    {{ our_user.favorite_color }}
+                    <a href="{{ url_for('delete',id=our_user.id) }}">Delete</a>                    
+            </td> 
+            <br/>
         </tr>
+        {% endfor %}
     </table>
 
 
@@ -44,9 +50,15 @@
 <table class="table table-sm">
     <tr>
         <td>{% for our_user in our_users %} 
-            {{ our_user.id }} - <a href="{{ url_for('update',id=our_user.id) }}">{{ our_user.name }} </a> - {{ our_user.email }} - {{ our_user.favorite_color }} <br/>
-        {% endfor %}</td>
+            {{ our_user.id }} - <a href="{{ url_for('update',id=our_user.id) }}">
+                {{ our_user.name }} </a> - 
+                {{ our_user.email }} - 
+                {{ our_user.favorite_color }} 
+                <a href="{{ url_for('delete',id=our_user.id) }}">Delete</a>
+        </td>
+        <br/>
     </tr>
+    {% endfor %}
 </table>
 
         {% endif %}     
