added password hash

--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -41,6 +41,10 @@
             {{ form.email(class="form-control") }}
             {{ form.favorite_color.label(class="form-label") }}
             {{ form.favorite_color(class="form-control") }}
+            {{ form.password_hash.label(class="form-label") }}
+            {{ form.password_hash(class="form-control") }}
+            {{ form.password_hash2.label(class="form-label") }}
+            {{ form.password_hash2(class="form-control") }}
             <br/>
             {{ form.submit(class="btn btn-warning") }}
         </form>
@@ -53,7 +57,8 @@
             {{ our_user.id }} - <a href="{{ url_for('update',id=our_user.id) }}">
                 {{ our_user.name }} </a> - 
                 {{ our_user.email }} - 
-                {{ our_user.favorite_color }} 
+                {{ our_user.favorite_color }} <br/>
+                PW: {{ our_user.password_hash }}
                 <a href="{{ url_for('delete',id=our_user.id) }}">Delete</a>
         </td>
         <br/>
