--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -18,6 +18,9 @@
             <a class="nav-link active" aria-current="page" href="{{url_for('add_user')}}">Add User</a>
           </li>
 
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{{url_for('test_pw')}}">Test Password</a>
+          </li>
 
           
           
