--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,20 +7,28 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{url_for('user',name='renan')}}">User Profile</a>
+            <a class="nav-link active" aria-current="page" href="{{ url_for('user',name='renan') }}">User Profile</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{url_for('name')}}">Name</a>
+            <a class="nav-link active" aria-current="page" href="{{ url_for('name') }}">Name</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{url_for('add_user')}}">Add User</a>
+            <a class="nav-link active" aria-current="page" href="{{ url_for('add_user') }}">Add User</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{url_for('test_pw')}}">Test Password</a>
+            <a class="nav-link active" aria-current="page" href="{{ url_for('test_pw') }}">Test Password</a>
           </li>
+
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{{ url_for('add_post') }}">Add Blog</a>
+          </li>
+
+
+
+
 
           
           
