--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -26,6 +26,11 @@
             <a class="nav-link active" aria-current="page" href="{{ url_for('add_post') }}">Add Blog</a>
           </li>
 
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{{ url_for('posts') }}">Blog POsts</a>
+          </li>
+
+
 
 
 
