added dashboard and login form

--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -37,6 +37,8 @@
             {{ form.hidden_tag() }}
             {{ form.name.label(class="form-label") }}
             {{ form.name(class="form-control") }}
+            {{ form.username.label(class="form-label") }}
+            {{ form.username(class="form-control") }}
             {{ form.email.label(class="form-label") }}
             {{ form.email(class="form-control") }}
             {{ form.favorite_color.label(class="form-label") }}
@@ -56,6 +58,7 @@
         <td>{% for our_user in our_users %} 
             {{ our_user.id }} - <a href="{{ url_for('update',id=our_user.id) }}">
                 {{ our_user.name }} </a> - 
+                {{ our_user.username }} -
                 {{ our_user.email }} - 
                 {{ our_user.favorite_color }} <br/>
                 PW: {{ our_user.password_hash }}
