--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,16 +6,33 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+          {% if current_user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{{ url_for('logout') }}">Logout</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{{ url_for('logout') }}">Dashboard</a>
+          </li>
+
+          {% else %}
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{{ url_for('login') }}">Login</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{{ url_for('add_user') }}">Register</a>
+          </li>
+
+          {% endif %}
+
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{{ url_for('user',name='renan') }}">User Profile</a>
           </li>
-
+          
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{{ url_for('name') }}">Name</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{ url_for('add_user') }}">Add User</a>
           </li>
 
           <li class="nav-item">
@@ -29,6 +46,8 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{{ url_for('posts') }}">Blog POsts</a>
           </li>
+
+          
 
 
 
