--- a/templates/update.html
+++ b/templates/update.html
@@ -31,6 +31,8 @@
             {{ form.hidden_tag() }}
             {{ form.name.label(class="form-label") }}
             {{ form.name(class="form-control", value=name_to_update.name) }}
+            {{ form.username.label(class="form-label") }}
+            {{ form.username(class="form-control", value=name_to_update.username) }}
             {{ form.email.label(class="form-label") }}
             {{ form.email(class="form-control",value=name_to_update.email) }}
             <br/>
