--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -18,8 +18,8 @@
         {{ form.hidden_tag() }}
         {{ form.title.label(class="form-label") }}
         {{ form.title(class="form-control") }}
-        {{ form.author.label(class="form-label") }}
-        {{ form.author(class="form-control") }}
+        <!-- {{ form.author.label(class="form-label") }}
+        {{ form.author(class="form-control") }} -->
         {{ form.slug.label(class="form-label") }}
         {{ form.slug(class="form-control") }}
         <br/>
