--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,7 +13,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{{ url_for('logout') }}">Dashboard</a>
+            <a class="nav-link active" aria-current="page" href="{{ url_for('dashboard') }}">Dashboard</a>
           </li>
 
           {% else %}
