--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+{{ ckeditor.load() }}
 
 {% for message in get_flashed_messages() %}
     <div class="alert alert-success alert-dismissible fade show" role="alert">
@@ -30,6 +31,11 @@
             <br/>
             {{ form.submit(class="btn btn-warning") }}
         </form>
+
+        <!-- load ckeditor -->
+        {{ ckeditor.load() }}
+        {{ ckeditor.config(name='body') }}
+
     </div>
 
 <!-- this comment below is another option of login validation -->
