--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -20,11 +20,17 @@
         </div>
         <div class="card-body">
           <h5 class="card-title">Welcome to your dashboard</h5>
+
+          <div class="container">
+                <div class="row">
+                    <div class="col-8">
+
           <strong>Name :</strong>{{ current_user.name }}<br/>
           <strong>User Name :</strong>{{ current_user.username }}<br/>
           <strong>User ID :</strong>{{ current_user.id }}<br/>
           <strong>Email :</strong>{{ current_user.email }}<br/>
           <strong>Favorite Color :</strong>{{ current_user.favorite_color }}<br/>
+          <strong>About the Author:</strong>{{ current_user.about_author }}<br/>
           <strong>Date Joined :</strong>{{ current_user.date_added }}<br/>
 
           <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -32,6 +38,13 @@
           <a href=" {{ url_for('update', id=current_user.id)  }}" class="btn btn-success bt-sm">Update</a>
           <a href="{{ url_for('delete',id=current_user.id) }}" class="btn btn-danger">Delete</a>
 
+         
+        </div>
+        <div class="col-4">
+            <img src="{{ url_for('static', filename='images/pict.jpg') }}" width="200" align="right" > 
+        </div>
+        </div>
+        </div>
         </div>
     </div>
 
@@ -53,6 +66,9 @@
                 <br/>
                 {{ form.favorite_color.label(class="form-label") }}
                 {{ form.favorite_color(class="form-control", value=name_to_update.favorite_color) }}
+                
+                {{ form.about_author.label(class="form-label") }}
+                {{ form.about_author(class="form-control", value=name_to_update.about_author) }}
                 <br/>
                 {{ form.submit(class="btn btn-warning") }}
     
