--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,6 +12,12 @@
             <a class="nav-link active" aria-current="page" href="{{ url_for('logout') }}">Logout</a>
           </li>
 
+          {% if current_user.id == 3 %}
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{{ url_for('admin') }}">Admin</a>
+          </li>
+          {% endif %}
+
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{{ url_for('dashboard') }}">Dashboard</a>
           </li>
@@ -47,18 +53,12 @@
             <a class="nav-link active" aria-current="page" href="{{ url_for('posts') }}">Blog POsts</a>
           </li>
 
-          
-
-
-
-
-
-
-          
+                  
           
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <form method="POST" action="{{ url_for('search') }}" class="d-flex">
+          {{ form.hidden_tag() }}
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search", name="searched">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
       </div>
