--- a/templates/post.html
+++ b/templates/post.html
@@ -20,14 +20,16 @@
     {{ post.slug }} <br>
     {{ post.date_posted }}
     {{ post.title }} <br>
-    {{ post.content }} <br><br>
+    {{ post.content | safe }} <br><br>
+    {{ post.poster.about_author }}
     </small> 
 </div>
 <br>
 
 <a href="{{ url_for('posts') }}" class="btn btn-outline-primary btn-sm">Back to Blog</a>
-<a href="{{ url_for('edit_post',id=post.id) }}" class="btn btn-outline-secondary btn-sm">Edit Post</a>
-
-
+{% if post.poster_id == current_user.id %}
+    <a href="{{ url_for('edit_post',id=post.id) }}" class="btn btn-outline-secondary btn-sm">Edit</a>
+    <a href="{{ url_for('delete_post',id=post.id) }}" class = "btn btn-outline-danger btn-sm">Delete</a>
+{% endif %}
 
 {% endblock %}
