--- a/templates/posts.html
+++ b/templates/posts.html
@@ -20,12 +20,14 @@
     {{ post.slug }} <br>
     {{ post.date_posted }}
     {{ post.title }} <br>
-    {{ post.content }} <br><br>
+    {{ post.content | safe }} <br><br>
     </small> 
 
-    <a href="{{ url_for('post',id=post.id) }}" class = "btn btn-outline-primary bt-sm">View Post</a>
-    <a href="{{ url_for('edit_post',id=post.id) }}" class = "btn btn-outline-secondary bt-sm">Edit Post</a>
-    <a href="{{ url_for('delete_post',id=post.id) }}" class = "btn btn-outline-danger bt-sm">Delete Post</a>
+    <a href="{{ url_for('post',id=post.id) }}" class = "btn btn-outline-primary btn-sm">View Post</a>
+    {% if post.poster_id == current_user.id %}
+        <a href="{{ url_for('edit_post',id=post.id) }}" class = "btn btn-outline-secondary btn-sm">Edit Post</a>
+        <a href="{{ url_for('delete_post',id=post.id) }}" class = "btn btn-outline-danger btn-sm">Delete Post</a>
+    {% endif %}
 </div>
 <br>
 {% endfor %}
